# kettle-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/crtp_interface/: binary_plus.hpp  log_expr.hpp  trait_maker.hpp  unary_plus.hpp
include/crtp_interface/traits/: trait_maker.hpp
include/kettle++/: binary_plus.hpp  log_expr.hpp  plus_assign.hpp  unary_plus.hpp
include/kettle++/ops/: binary_plus.hpp  minus_assign.hpp  plus_assign.hpp  unary_plus.hpp
include/kettle++/traits/: trait_maker.hpp
src/: CMakeLists.txt  test.cpp  test_binary_plus.cpp
test/: CMakeLists.txt  add_binary_plus_from_minus_ops.cpp  add_binary_plus_from_plus_assign.cpp  all_defined.hpp  catch.cpp  has_checks_double.cpp  has_checks_int.cpp  has_checks_int_ptr.cpp  has_checks_nullptr.cpp  has_checks_void.cpp
test/binary_plus/: CMakeLists.txt  all_defined.cpp  all_defined_bp.cpp  from_binary_plus.cpp  from_minus_ops.cpp  from_plus_assign.cpp
test/minus_assign/: CMakeLists.txt  all_defined.cpp  from_binary_minus.cpp  from_binary_plus_and_unary_minus.cpp  from_minus_assign.cpp  from_plus_assign_and_unary_minus.cpp
test/plus_assign/: CMakeLists.txt  all_defined.cpp  from_binary_plus.cpp  from_binary_plus_and_unary_minus.cpp  from_minus_assign_and_unary_minus.cpp  from_plus_assign.cpp
test/traits/: CMakeLists.txt  has_checks_double.cpp  has_checks_int.cpp  has_checks_int_ptr.cpp  has_checks_nullptr.cpp  has_checks_void.cpp
